--- a/public/styles.css
+++ b/public/styles.css
@@ -82,6 +82,19 @@ h3 {
     gap: 10px;
 }
 
+fieldset.checkboxes {
+    border: 1px solid #ddd;
+    padding: 15px;
+    border-radius: 8px;
+    margin-top: 10px; /* Adjust as needed */
+}
+
+fieldset.checkboxes legend {
+    font-weight: 500;
+    color: #555;
+    padding: 0 5px;
+}
+
 .checkboxes label {
     display: flex;
     align-items: center;
